--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
@@ -25,7 +25,7 @@ menu:
         internal_settings: 'تنظیمات درونی'
         import: 'درون‌ریزی'
         howto: 'خودآموز'
-        developer: 'فرابران'
+        developer: 'سازندگان'
         logout: 'خروج'
         about: 'درباره'
         search: 'جستجو'
@@ -256,81 +256,81 @@ howto:
 
 quickstart:
     page_title: 'Quickstart'
-    # intro:
-    #     title: 'Welcome to wallabag!'
-    #     paragraph_1: "We'll accompany you to visit wallabag and show you some features which can interest you."
-    #     paragraph_2: 'Follow us!'
-    # configure:
-    #     title: 'Configure the application'
-    #     language: 'Change language and design'
-    #     rss: 'Enable RSS feeds'
-    #     tagging_rules: 'Write rules to automatically tag your articles'
-    # admin:
-    #     title: 'Administration'
-    #     description: 'As an administrator, you have privileges on wallabag. You can:'
-    #     new_user: 'Create a new user'
-    #     analytics: 'Configure analytics'
-    #     sharing: 'Enable some parameters about article sharing'
-    #     export: 'Configure export'
-    #     import: 'Configure import'
-    # first_steps:
-    #     title: 'First steps'
-    #     new_article: 'Save your first article'
-    #     unread_articles: 'And classify it!'
-    # migrate:
-    #     title: 'Migrate from an existing service'
-    #     description: "Are you using another service? We'll help you to retrieve your data on wallabag."
-    #     pocket: 'Migrate from Pocket'
-    #     wallabag_v1: 'Migrate from wallabag v1'
-    #     wallabag_v2: 'Migrate from wallabag v2'
-    # developer:
-    #     title: 'Developers'
-    #     create_application: 'Create your third application'
-    # docs:
-    #     title: 'Full documentation'
-    #     annotate: 'Annotate your article'
-    #     export: 'Convert your articles into ePUB or PDF'
-    #     search_filters: 'See how you can look for an article by using search engine and filters'
-    #     fetching_errors: 'What can I do if an article encounters errors during fetching?'
-    #     all_docs: 'And so many other articles!'
-    # support:
-    #     title: 'Support'
-    #     description: 'If you need some help, we are here for you.'
-    #     github: 'On GitHub'
-    #     email: 'By email'
-    #     gitter: 'On Gitter'
+     intro:
+         title: 'به wallabag خوش آمدید!!'
+         paragraph_1: "به شما کمک خواهیم کرد تا wallabag را بشناسید و با برخی از ویژگی‌های جالبش آشنا شوید"
+         paragraph_2: 'ادامه دهید!'
+     configure:
+         title: 'برنامه را تنظیم کنید'
+         language: 'زبان و نمای برنامه را تغییر دهید'
+         rss: 'خوراک آر-اس-اس را فعال کنید'
+         tagging_rules: 'قانون‌های برچسب‌گذاری خودکار مقاله‌هایتان را تعریف کنید'
+     admin:
+         title: 'مدیریت'
+         description: 'به عنوان مدیر، شما دسترسی‌های بیشتری به wallabag دارید. شما می‌توانید:'
+         new_user: 'کاربر تازه‌ای بسازید'
+         analytics: 'تحلیل‌های آماری را تنظیم کنید'
+         sharing: 'گزینه‌های مربوط به هم‌رسانی مقاله‌ها را فعال کنید'
+         export: 'برون‌سپاری را تنظیم کنید'
+         import: 'درون‌ریزی را تنظیم کنید'
+     first_steps:
+         title: 'گام نخست'
+         new_article: 'نخستین مقالهٔ خود را ذخیره کنید'
+         unread_articles: 'و آن را طبقه‌بندی کنید!'
+     migrate:
+         title: 'از سرویس قبلی خود به این‌جا مهاجرت کنید'
+         description: "آیا سرویس دیگری را به‌کار می‌برید؟ داده‌هایتان را به wallabag بیاورید.."
+         pocket: 'مهاجرت از Pocket'
+         wallabag_v1: 'مهاجرت از نسخهٔ یکم wallabag'
+         wallabag_v2: 'مهاجرت از نسخهٔ دوم wallabag'
+     developer:
+         title: 'برنامه‌نویسان'
+         create_application: 'برنامهٔ wallabag خود را بسازید'
+     docs:
+         title: 'راهنمای کامل'
+         annotate: 'روی مقاله‌هایتان یادداشت بگذارید'
+         export: 'مقاله‌هایتان را به قالب ePUB یا PDF دربیاورید'
+         search_filters: 'به کمک موتور جستجو و فیلترها به دنبال مقاله‌هایتان بگردید'
+         fetching_errors: 'اگر مقاله‌ای هنگام ذخیره‌ شدن به مشکل برخورد چه کار کنید؟'
+         all_docs: 'و بسیاری از موضوعات دیگر'
+     support:
+         title: 'پشتیبانی'
+         description: 'به کمک نیاز دارید؟ ما پشتیبان شما هستیم!'
+         github: 'روی گیت‌هاب'
+         email: 'با ایمیل'
+         gitter: 'روی گیتر'
 
 tag:
     page_title: 'برچسب‌ها'
     list:
-        # number_on_the_page: '{0} There is no tag.|{1} There is one tag.|]1,Inf[ There are %count% tags.'
+         number_on_the_page: '{0} هیچ برچسبی نیست.|{1} یک برچسب هست.|]1,Inf[ %count% برچسب هست.'
 
 import:
-    # page_title: 'Import'
-    # page_description: 'Welcome to wallabag importer. Please select your previous service that you want to migrate.'
-    # action:
-    #     import_contents: 'Import contents'
-    # form:
-    #     mark_as_read_title: 'Mark all as read?'
-    #     mark_as_read_label: 'Mark all imported entries as read'
-    #     file_label: 'File'
-    #     save_label: 'Upload file'
-    # pocket:
-    #     page_title: 'Import > Pocket'
-    #     description: "This importer will import all your Pocket data. Pocket doesn't allow us to retrieve content from their service, so the readable content of each article will be re-fetched by wallabag."
-    #     config_missing:
-    #         description: "Pocket import isn't configured."
-    #         admin_message: 'You need to define %keyurls%a pocket_consumer_key%keyurle%.'
-    #         user_message: 'Your server admin needs to define an API Key for Pocket.'
-    #     authorize_message: 'You can import your data from your Pocket account. You just have to click on the below button and authorize the application to connect to getpocket.com.'
-    #     connect_to_pocket: 'Connect to Pocket and import data'
-    # wallabag_v1:
-    #     page_title: 'Import > Wallabag v1'
-    #     description: 'This importer will import all your wallabag v1 articles. On your config page, click on "JSON export" in the "Export your wallabag data" section. You will have a "wallabag-export-1-xxxx-xx-xx.json" file.'
-    #     how_to: 'Please select your wallabag export and click on the below button to upload and import it.'
-    # wallabag_v2:
-    #     page_title: 'Import > Wallabag v2'
-    #     description: 'This importer will import all your wallabag v2 articles. Go to All articles, then, on the export sidebar, click on "JSON". You will have a "All articles.json" file.'
+     page_title: 'درون‌ریزی'
+     page_description: 'به درون‌ریز wallabag خوش آمدید. لطفاً سرویس قبلی خود را که می‌خواهید از آن مهاجرت کنید انتخاب کنید.'
+     action:
+         import_contents: 'درون‌ریزی مقاله‌ها'
+     form:
+         mark_as_read_title: 'علامت‌زدن همه به عنوان خوانده‌شده؟'
+         mark_as_read_label: 'همهٔ مقاله‌های درون‌ریزی شده را به عنوان خوانده‌شده علامت بزن'
+         file_label: 'پرونده'
+         save_label: 'بارگذاری پرونده'
+     pocket:
+         page_title: 'درون‌ریزی > Pocket'
+         description: "این برنامه همهٔ داده‌های Pocket شما را درون‌ریزی می‌کند. سرویس Pocket اجازه نمی‌دهد که متن مقاله‌ها را درون‌ریزی کنیم، بنابراین wallabag متن مقاله‌ها را دوباره از اینترنت دریافت می‌کند."
+         config_missing:
+             description: "درون‌ریزی از Pocket تنظیم نشده است."
+             admin_message: 'شما باید %keyurls%یک pocket_consumer_key%keyurle% تعریف کنید.'
+             user_message: 'مدیر سرور شما باید یک API Key برای Pocket تعریف کند.'
+         authorize_message: 'شما می‌توانید داده‌هایتان را از حساب Pocket خود درون‌ریزی کنید. روی دکمهٔ زیر کلیک کنید و به برنامه اجازه دهید تا به getpocket.com وصل شود.'
+         connect_to_pocket: 'به Pocket وصل شو و داده‌ها را دریافت کن'
+     wallabag_v1:
+         page_title: 'درون‌ریزی > Wallabag v1'
+         description: 'این برنامه همهٔ داده‌های شما را در نسخهٔ ۱ wallabag درون‌ریزی می‌کند. در صفحهٔ تنظیمات، روی "JSON export" در بخش "Export your wallabag data" کلیک کنید. با این کار شما پرونده‌ای به شکل "wallabag-export-1-xxxx-xx-xx.json" دریافت خواهید کرد.'
+         how_to: 'لطفاً پرونده را انتخاب کنید و روی دکمهٔ زیر کلیک کنید تا بارگذاری و درون‌ریزی شود.'
+     wallabag_v2:
+         page_title: 'درون‌ریزی > Wallabag v2'
+         description: 'این برنامه همهٔ داده‌های شما را در نسخهٔ ۲ wallabag درون‌ریزی می‌کند. به بخش «همهٔ مقاله‌ها» بروید و در بخش «برون‌ریزی» روی "JSON" کلیک کنید. با این کار شما پرونده‌ای به شکل "All articles.json" دریافت خواهید کرد.'
 
 developer:
     # page_title: 'Developer'
@@ -415,9 +415,9 @@ flashes:
             tag_added: 'برچسب افزوده شد'
     import:
         notice:
-            # failed: 'Import failed, please try again.'
-            # failed_on_file: 'Error while processing import. Please verify your import file.'
-            # summary: 'Import summary: %imported% imported, %skipped% already saved.'
+             failed: 'درون‌ریزی شکست خورد. لطفاً دوباره تلاش کنید.'
+             failed_on_file: 'خطا هنگام پردازش پروندهٔ ورودی. آیا پروندهٔ درون‌ریزی شده سالم است؟'
+             summary: 'گزارش درون‌ریزی: %imported% وارد شد, %skipped% از قبل ذخیره شده بود.'
     developer:
         notice:
             # client_created: 'New client created.'
